--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 
+assets/files/*
+.settings/*
+application/models/proxies/*
+
 user_guide/*
