--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ assets/files/users/default/*
 !assets/files/users/default/no-photo.jpg
 !assets/files/users/default/cropped/*
 assets/files/users/default/cropped/*
-!assets/files/users/default/cropped/no-photo*
+!assets/files/users/default/cropped/no-photo.jpg_w100_cx0_cy0_cw598_ch598.jpg
 
 
 
