Adding default image

--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,10 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 
-assets/files/users/default/*
-
-!assets/files/users/default/cropped/*
-assets/files/users/default/cropped/*
-!assets/files/users/default/cropped/no-photo.jpg_w100_cx0_cy0_cw598_ch598.jpg
-
-
-
-
+assets/files/*
+!assets/files/users
+assets/files/users/*
+!assets/files/users/default
 
 .settings/*
 application/models/proxies/*.php
